set ignore set ImageEffect01.unity

--- a/.gitignore
+++ b/.gitignore
@@ -701,3 +701,15 @@ UpgradeLog*.XML
 /COURSE/Water01/Water01.sln
 /COURSE/Water01/Water01.userprefs
 /COURSE/Water01/Water01-csharp.sln
+/COURSE/ImageEffect01/*.csproj
+/COURSE/ImageEffect01/*.csproj
+/COURSE/ImageEffect01/*.csproj
+/COURSE/ImageEffect01/*.csproj
+/COURSE/ImageEffect01/*.csproj
+/COURSE/ImageEffect01/*.csproj
+/COURSE/ImageEffect01/*.unityproj
+/COURSE/ImageEffect01/*.unityproj
+/COURSE/ImageEffect01/*.unityproj
+/COURSE/ImageEffect01/*.unityproj
+/COURSE/ImageEffect01/*.sln
+/COURSE/ImageEffect01/*.sln
