add project ModelAnimation01

--- a/.gitignore
+++ b/.gitignore
@@ -717,3 +717,14 @@ UpgradeLog*.XML
 /COURSE/ImageEffect01/*.userprefs
 
 /COURSE/ImageEffect01/*.pidb
+/COURSE/ModelAnimation01/*.csproj
+/COURSE/ModelAnimation01/*.csproj
+/COURSE/ModelAnimation01/*.csproj
+/COURSE/ModelAnimation01/*.csproj
+/COURSE/ModelAnimation01/*.sln
+/COURSE/ModelAnimation01/*.sln
+/COURSE/ModelAnimation01/*.pidb
+/COURSE/ModelAnimation01/*.pidb
+/COURSE/ModelAnimation01/*.userprefs
+/COURSE/ModelAnimation01/Library/ScriptAssemblies
+/COURSE/ModelAnimation01/Library/metadata
