add ModelAnimation01/Assets/Scenes/ModelAnimationScene02.unity add PlayAnimationPingpong01.cs

--- a/.gitignore
+++ b/.gitignore
@@ -729,3 +729,4 @@ UpgradeLog*.XML
 /COURSE/ModelAnimation01/Library/ScriptAssemblies
 /COURSE/ModelAnimation01/Library/metadata
 /DEPENDENCY/2DGameplayTutorialProject/Temp
+/COURSE/ModelAnimation01/Temp
