--- a/.gitignore
+++ b/.gitignore
@@ -761,3 +761,18 @@ UpgradeLog*.XML
 /COURSE/ModelAvatar01/*.csproj
 /COURSE/ModelAvatar01/*.sln
 /COURSE/ModelAvatar01/*.userprefs
+/COURSE/Database01/*.sln
+/COURSE/Database01/*.csproj
+/COURSE/Database01/*.pidb
+/COURSE/Database01/*.csproj
+/COURSE/Database01/*.pidb
+/COURSE/Database01/*.unityproj
+/COURSE/Database01/*.pidb
+/COURSE/Database01/*.unityproj
+/COURSE/Database01/*.unityproj
+/COURSE/Database01/*.unityproj
+/COURSE/Database01/*.sln
+/COURSE/Database01/*.userprefs
+/COURSE/Database01/Temp
+/COURSE/Database01/Library/ScriptAssemblies
+/COURSE/Database01/Library/metadata
