--- a/.gitignore
+++ b/.gitignore
@@ -799,3 +799,7 @@ UpgradeLog*.XML
 /COURSE/ObjectAnimation03/Library/ScriptAssemblies
 /COURSE/ObjectAnimation03/Library/metadata
 /COURSE/ObjectAnimation03/Temp
+/COURSE/ObjectAnimation03/*.csproj
+/COURSE/ObjectAnimation03/*.csproj
+/COURSE/ObjectAnimation03/*.sln
+/COURSE/ObjectAnimation03/*.sln
