rename KandyCrusherEditorWindow.cs to TowerOfWhat/Assets/Scripts/TowerOfWhatManager.cs rename KandyCrusherScene.unity to TowerOfWhat/Assets/Scenes/TowerOfWhatScene.unity rename KandyCrusherEditorWindow.cs to TowerOfWhat/Assets/Editor/TowerOfWhatEditorWindow.cs

--- a/.gitignore
+++ b/.gitignore
@@ -815,3 +815,12 @@ UpgradeLog*.XML
 /COURSE/CollisionDemonstration08/*.sln
 /COURSE/CollisionDemonstration08/Library/ScriptAssemblies
 /COURSE/CollisionDemonstration08/Library/metadata
+/COURSE/TowerOfWhat/*.csproj
+/COURSE/TowerOfWhat/*.csproj
+/COURSE/TowerOfWhat/*.csproj
+/COURSE/TowerOfWhat/*.csproj
+/COURSE/TowerOfWhat/*.sln
+/COURSE/TowerOfWhat/*.sln
+/COURSE/TowerOfWhat/Library/metadata
+/COURSE/TowerOfWhat/Library/ScriptAssemblies
+/COURSE/TowerOfWhat/Temp
