--- a/.gitignore
+++ b/.gitignore
@@ -862,3 +862,17 @@ UpgradeLog*.XML
 /COURSE/Animation01/*.csproj
 /COURSE/Animation01/Temp
 /COURSE/Animation01/Library/metadata
+/COURSE/CollisionDemonstration07/*.unityproj
+/COURSE/CollisionDemonstration07/*.unityproj
+/COURSE/CollisionDemonstration07/*.sln
+/COURSE/CollisionDemonstration07/*.userprefs
+/COURSE/CollisionDemonstration07/*.sln
+/COURSE/CollisionDemonstration07/*.csproj
+/COURSE/CollisionDemonstration07/*.csproj
+/COURSE/CollisionDemonstration08/*.unityproj
+/COURSE/CollisionDemonstration08/*.unityproj
+/COURSE/CollisionDemonstration08/*.sln
+/COURSE/CollisionDemonstration08/*.userprefs
+/COURSE/CollisionDemonstration08/*.sln
+/COURSE/CollisionDemonstration08/*.csproj
+/COURSE/CollisionDemonstration08/*.csproj
